WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270114
`--site-isolation` isn't running tests in a cross-origin iframe
https://bugs.webkit.org/show_bug.cgi?id=270114
Summary
`--site-isolation` isn't running tests in a cross-origin iframe
Charlie Wolfe
Reported
2024-02-26 12:42:48 PST
A typo was preventing it from being enabled. Most tests actually fail, so only enable a few for now.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-26 12:43:09 PST
<
rdar://problem/123646865
>
Charlie Wolfe
Comment 2
2024-02-26 12:44:36 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25126
EWS
Comment 3
2024-03-08 08:14:22 PST
Committed
275837@main
(be13d892218c): <
https://commits.webkit.org/275837@main
> Reviewed commits have been landed. Closing PR #25126 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug