`--site-isolation` isn't running tests in a cross-origin iframe https://bugs.webkit.org/show_bug.cgi?id=270114 rdar://123646865

Reviewed by Alex Christensen.

A typo was preventing it from being enabled.

Most tests actually fail, so only enable a few for now.

* LayoutTests/platform/mac-site-isolation/TestExpectations:
* Tools/Scripts/webkitpy/layout_tests/run_webkit_tests.py:
(_set_up_derived_options):
* Tools/Scripts/webkitpy/port/driver.py:
(Driver.is_http_test):
* Tools/Scripts/webkitpy/port/driver_unittest.py:
* Tools/WebKitTestRunner/TestInvocation.cpp:
(WTR::TestInvocation::invoke):
* Tools/WebKitTestRunner/TestOptions.cpp:
(WTR::TestOptions::defaults):
(WTR::TestOptions::keyTypeMapping):
* Tools/WebKitTestRunner/TestOptions.h:
(WTR::TestOptions::runInCrossOriginFrame const):
(WTR::TestOptions::runInCrossOriginIFrame const): Deleted.

Canonical link: https://commits.webkit.org/275837@main