Tools/WebKitTestRunner/TestInvocation.cpp
@@ -175,7 +175,7 @@ void TestInvocation::invoke()
     if (m_error)
         goto end;
 
-    if (m_options.runInCrossOriginIFrame()) {
+    if (m_options.runInCrossOriginFrame()) {
         WKRetainPtr<WKURLRef> baseURL = adoptWK(WKURLCreateWithUTF8CString("http://www.webkit.org"));
         WKRetainPtr<WKStringRef> htmlString = toWK(makeString("<iframe src=\"", m_urlString.utf8().data(), "\" style=\"position:absolute; top:0; left:0; width:100%; height:100%; border:0\">"));
         WKPageLoadHTMLString(TestController::singleton().mainWebView()->page(), htmlString.get(), baseURL.get());
